--- a/special-pages/pages/release-notes/public/locales/it/release-notes.json
+++ b/special-pages/pages/release-notes/public/locales/it/release-notes.json
@@ -69,8 +69,8 @@
     "note" : "Label for a button that retries applying the failed update"
   },
   "forSubscribers" : {
-    "title" : "Per gli abbonati a Privacy Pro",
-    "note" : "Heading label for release notes specific to Privacy Pro Subscribers (do not translate Privacy Pro)"
+    "title" : "Per gli abbonati a DuckDuckGo",
+    "note" : "Heading label for release notes specific to DuckDuckGo Subscribers"
   },
   "new" : {
     "title" : "Nuova",
