Update Russian localization badge text

--- a/special-pages/pages/new-tab/public/locales/ru/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/ru/new-tab.json
@@ -193,7 +193,7 @@
     "description" : "Title for the popover that introduces the search/AI toggle feature."
   },
   "omnibar_customizePopoverBadge" : {
-    "title" : "Новая вкладка",
+    "title" : "Новый",
     "description" : "Badge text for the popover that introduces the search/AI toggle feature."
   },
   "omnibar_customizePopoverDescription" : {
