feat: Add Subscription NextSteps card variant

--- a/special-pages/pages/new-tab/public/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/en/new-tab.json
@@ -297,6 +297,18 @@
     "title": "Pinned to Taskbar!",
     "note": "Button text after clicking on the Next Steps card for adding DDG app to OS dock"
   },
+  "nextSteps_subscription_title": {
+    "title": "Unlock Premium Features Free for 7 Days!",
+    "note": "Title of the Next Steps card for subscribing to DuckDuckGo"
+  },
+  "nextSteps_subscription_summary": {
+    "title": "Right now, you can try our optional paid subscription featuring a VPN + 3 more premium features for free.",
+    "note": "Summary of the Next Steps card for subscribing to DuckDuckGo"
+  },
+  "nextSteps_subscription_actionText": {
+    "title": "Try It for Free",
+    "note": "Button text of the Next Steps card for subscribing to DuckDuckGo"
+  },
   "favorites_show_less": {
     "title": "Show less",
     "note": "Button label to display fewer items"
