--- a/special-pages/pages/new-tab/public/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/en/new-tab.json
@@ -298,16 +298,16 @@
     "note": "Button text after clicking on the Next Steps card for adding DDG app to OS dock"
   },
   "nextSteps_subscription_title": {
-    "title": "Unlock Premium Features Free for 7 Days!",
-    "note": "Title of the Next Steps card for subscribing to DuckDuckGo"
+    "title": "Unlock Your Free Trial",
+    "note": "Title of the Next Steps card for unlocking your free trial of DuckDuckGo subscription"
   },
   "nextSteps_subscription_summary": {
-    "title": "Right now, you can try our optional paid subscription featuring a VPN + 3 more premium features for free.",
-    "note": "Summary of the Next Steps card for subscribing to DuckDuckGo"
+    "title": "Try our subscription featuring a VPN + 3 more premium features.",
+    "note": "Summary of the Next Steps card about the DuckDuckGo subscription"
   },
   "nextSteps_subscription_actionText": {
-    "title": "Try It for Free",
-    "note": "Button text of the Next Steps card for subscribing to DuckDuckGo"
+    "title": "Try Free for 7 Days",
+    "note": "Button text of the Next Steps card for trying the DuckDuckGo subscription"
   },
   "favorites_show_less": {
     "title": "Show less",
