--- a/special-pages/pages/new-tab/public/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/en/new-tab.json
@@ -78,11 +78,11 @@
     "note": "Placeholder to indicate that no tracking activity was blocked in the last 7 days"
   },
   "stats_countBlockedSingular": {
-    "title": "1 tracking attempt blocked",
+    "title": "Tracking attempt blocked",
     "note": "The main headline indicating that a single tracker was blocked"
   },
   "stats_countBlockedPlural": {
-    "title": "{count} tracking attempts blocked",
+    "title": "Tracking attempts blocked",
     "note": "The main headline indicating that more than 1 attempt has been blocked. Eg: '2 tracking attempts blocked'"
   },
   "stats_noActivityAdsAndTrackers": {
@@ -94,12 +94,20 @@
     "note": "Placeholder to indicate that no ads or tracking activity was blocked in the last 7 days"
   },
   "stats_countBlockedAdsAndTrackersSingular": {
-    "title": "<b>1</b> advertising & tracking attempt blocked",
+    "title": "advertising & tracking attempt blocked",
     "note": "The main headline indicating that a single ad or tracking attempt was blocked"
   },
   "stats_countBlockedAdsAndTrackersPlural": {
-    "title": "<b>{count}</b> advertising & tracking attempts blocked",
+    "title": "advertising & tracking attempts blocked",
     "note": "The main headline indicating that more than 1 ad or tracking attempt has been blocked. Eg: '2 advertising & tracking attempts blocked"
+  },
+  "stats_totalCookiePopUpsBlockedSingular": {
+    "title": "Cookie pop-up blocked",
+    "note": "The heading indicating that a single cookie pop-up was handled by the CPM"
+  },
+  "stats_totalCookiePopUpsBlockedPlural": {
+    "title": "Cookie pop-ups blocked",
+    "note": "The heading indicating multiple cookie pop-ups were handled by the CPM"
   },
   "stats_feedCountBlockedSingular": {
     "title": "1 attempt blocked by DuckDuckGo in the last 7 days",
@@ -410,8 +418,12 @@
     "note": "Placeholder message indicating that no trackers are blocked"
   },
   "activity_countBlockedPlural": {
-    "title": "<b>{count}</b> tracking attempts blocked",
-    "note": "The main headline indicating that more than 1 attempt has been blocked. Eg: '2 tracking attempts blocked'"
+    "title": "{tickMark} {count} Tracking attempts blocked",
+    "note": "The main headline indicating that more than 1 attempt has been blocked. Eg: '2 Tracking attempts blocked'"
+  },
+  "activity_countBlockedSingular": {
+    "title": "{tickMark} {count} Tracking attempt blocked",
+    "note": "The main headline indicating that 1 attempt has been blocked. Eg: '1 Tracking attempt blocked'"
   },
   "activity_noRecentAdsAndTrackers_subtitle": {
     "title": "Recently visited sites will appear here. Keep browsing to see how many ads and trackers we block.",
