Update strings to clarify intent for the translators
Update strings to (further) clarify intent

--- a/special-pages/pages/new-tab/public/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/en/new-tab.json
@@ -79,7 +79,7 @@
   },
   "stats_countBlockedSingular": {
     "title": "Tracking attempt blocked",
-    "note": "The main headline indicating that a single tracker was blocked"
+    "note": "The sub headline indicating that a single tracker was blocked. This sub headline starts with a capital letter"
   },
   "stats_countBlockedSingularLegacy": {
     "title": "1 tracking attempt blocked",
@@ -87,7 +87,7 @@
   },
   "stats_countBlockedPlural": {
     "title": "Tracking attempts blocked",
-    "note": "The main headline indicating that more than 1 attempt has been blocked. Eg: '2 tracking attempts blocked'"
+    "note": "The sub headline indicating that more than 1 tracker has been blocked. This sub headline starts with a capital letter"
   },
   "stats_countBlockedPluralLegacy": {
     "title": "{count} tracking attempts blocked",
@@ -101,17 +101,9 @@
     "title": "Protections active",
     "note": "Placeholder to indicate that no ads or tracking activity was blocked in the last 7 days"
   },
-  "stats_countBlockedAdsAndTrackersSingular": {
-    "title": "advertising & tracking attempt blocked",
-    "note": "The main headline indicating that a single ad or tracking attempt was blocked"
-  },
   "stats_countBlockedAdsAndTrackersSingularLegacy": {
     "title": "<b>1</b> advertising & tracking attempt blocked",
     "note": "The main headline indicating that a single ad or tracking attempt was blocked"
-  },
-  "stats_countBlockedAdsAndTrackersPlural": {
-    "title": "advertising & tracking attempts blocked",
-    "note": "The main headline indicating that more than 1 ad or tracking attempt has been blocked. Eg: '2 advertising & tracking attempts blocked"
   },
   "stats_countBlockedAdsAndTrackersPluralLegacy": {
     "title": "<b>{count}</b> advertising & tracking attempts blocked",
@@ -439,7 +431,7 @@
   },
   "activity_countBlockedPlural": {
     "title": "{count} Tracking attempts blocked",
-    "note": "Pill text indicating that more than 1 attempt has been blocked. Eg: '2 Tracking attempts blocked'"
+    "note": "New pill text indicating that more than 1 attempt has been blocked. Eg: '2 Tracking attempts blocked'. Uppercase T is by design"
   },
   "activity_countBlockedPluralLegacy": {
     "title": "<b>{count}</b> tracking attempts blocked",
