--- a/special-pages/pages/new-tab/public/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/en/new-tab.json
@@ -417,6 +417,42 @@
     "title": "Delete image {number}",
     "note": "Label text on a button that deletes an image. {number} will be replaced with a numeric reference of 1-8, eg: 'Delete image 1'"
   },
+  "customizer_section_title_theme_variant": {
+    "title": "Theme",
+    "note": "Section title for theme selection including theme variants"
+  },
+  "customizer_theme_variant_default": {
+    "title": "Default",
+    "note": "Label for the default theme variant"
+  },
+  "customizer_theme_variant_coolGray": {
+    "title": "Cool Grey",
+    "note": "Label for the cool grey theme variant"
+  },
+  "customizer_theme_variant_slateBlue": {
+    "title": "Slate",
+    "note": "Label for the slate blue theme variant"
+  },
+  "customizer_theme_variant_green": {
+    "title": "Green",
+    "note": "Label for the green theme variant"
+  },
+  "customizer_theme_variant_violet": {
+    "title": "Violet",
+    "note": "Label for the violet theme variant"
+  },
+  "customizer_theme_variant_rose": {
+    "title": "Rose",
+    "note": "Label for the rose theme variant"
+  },
+  "customizer_theme_variant_orange": {
+    "title": "Orange",
+    "note": "Label for the orange theme variant"
+  },
+  "customizer_theme_variant_desert": {
+    "title": "Desert",
+    "note": "Label for the desert theme variant"
+  },
   "activity_noRecent_title": {
     "title": "No recent browsing activity",
     "note": "Placeholder to indicate that no browsing activity was seen in the last 7 days"
