--- a/special-pages/pages/new-tab/public/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/en/new-tab.json
@@ -421,6 +421,10 @@
     "title": "Theme",
     "note": "Section title for theme selection including theme variants"
   },
+  "customizer_theme_variant_grid_label": {
+    "title": "Theme variant",
+    "note": "Accessibility label for the grid of theme variant options (Default, Cool Grey, Slate, etc.)"
+  },
   "customizer_theme_variant_default": {
     "title": "Default",
     "note": "Label for the default theme variant"
