Add Customizer theme variant onboarding popover

--- a/special-pages/pages/new-tab/public/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/en/new-tab.json
@@ -33,6 +33,14 @@
     "title": "Close",
     "note": "Button that closes the current popover."
   },
+  "customizer_themeVariantPopoverTitle": {
+    "title": "Pick a color that suits you",
+    "note": "Title for the popover that introduces the theme variant customization feature."
+  },
+  "customizer_themeVariantPopoverDescription": {
+    "title": "You can choose a color for the look that you want. Give it a try!",
+    "note": "Description message in the theme variant popover."
+  },
   "updateNotification_updated_version": {
     "title": "Browser Updated to version {version}.",
     "note": "Text to indicate which new version was updated. `{version}` will be formatted like `1.22.0`"
