--- a/special-pages/pages/onboarding/public/locales/en/onboarding.json
+++ b/special-pages/pages/onboarding/public/locales/en/onboarding.json
@@ -285,6 +285,22 @@
     "title": "No targeted ads. No targeted recommendations. Just your video.",
     "note": "Subtitle for a page that shows the benefits of using the Duck Player feature to watch YouTube videos more privately."
   },
+  "addressBarMode_title": {
+    "title": "Want easy access to private AI Chat?",
+    "note": "Title for the Address Bar Mode feature step in onboarding"
+  },
+  "addressBarMode_searchAndDuckAi": {
+    "title": "Search & Duck.ai",
+    "note": "Button label for enabling search with Duck.ai in the address bar"
+  },
+  "addressBarMode_searchOnly": {
+    "title": "Search Only",
+    "note": "Button label for search only mode in the address bar"
+  },
+  "addressBarMode_footer": {
+    "title": "AI features are private and optional. You can make changes in <b>Settings > AI Features</b>.",
+    "note": "Footer text explaining AI features are optional and can be changed in settings. The <b> tag is used to bold the settings path."
+  },
   "customize_title_v3": {
     "title": "Let’s customize a few things…",
     "note": "Title for a page that allows the user to customize specific settings in the DuckDuckGo browser."
