--- a/special-pages/pages/new-tab/public/locales/pl/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/pl/new-tab.json
@@ -8,6 +8,10 @@
       "instruction" : "*/note"
     }]
   },
+  "newBadge" : {
+    "title" : "Nowa",
+    "note" : "Badge text indicating a new feature."
+  },
   "ntp_show_less" : {
     "title" : "Pokaż mniej",
     "note" : "Button that reduces the number of items or content displayed."
@@ -31,6 +35,14 @@
   "ntp_popover_close_button" : {
     "title" : "Zamknij",
     "note" : "Button that closes the current popover."
+  },
+  "customizer_themeVariantPopoverTitle" : {
+    "title" : "Wybierz motyw kolorystyczny, który Ci odpowiada",
+    "note" : "Title for the popover that introduces the theme variant customization feature."
+  },
+  "customizer_themeVariantPopoverDescription" : {
+    "title" : "Teraz możesz wybrać kolor, który Ci odpowiada. Wypróbuj!",
+    "note" : "Description message in the theme variant popover."
   },
   "updateNotification_updated_version" : {
     "title" : "Przeglądarka została zaktualizowana do wersji {version}.",
@@ -59,10 +71,6 @@
   "protections_noRecent" : {
     "title" : "Brak ostatniej aktywności w zakresie śledzenia",
     "note" : "Placeholder text shown in the Details view when no tracking activity was blocked in the last 7 days. Keep concise if possible."
-  },
-  "newBadge" : {
-    "title" : "Nowa",
-    "note" : "Badge text indicating a new feature."
   },
   "stats_menuTitle" : {
     "title" : "Zablokowane próby śledzenia",
