--- a/special-pages/pages/new-tab/public/locales/de/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/de/new-tab.json
@@ -8,6 +8,10 @@
       "instruction" : "*/note"
     }]
   },
+  "newBadge" : {
+    "title" : "Neu",
+    "note" : "Badge text indicating a new feature."
+  },
   "ntp_show_less" : {
     "title" : "Weniger anzeigen",
     "note" : "Button that reduces the number of items or content displayed."
@@ -31,6 +35,14 @@
   "ntp_popover_close_button" : {
     "title" : "Schließen",
     "note" : "Button that closes the current popover."
+  },
+  "customizer_themeVariantPopoverTitle" : {
+    "title" : "Wähle ein Farbschema, das zu dir passt.",
+    "note" : "Title for the popover that introduces the theme variant customization feature."
+  },
+  "customizer_themeVariantPopoverDescription" : {
+    "title" : "Du kannst jetzt eine Farbe für den gewünschten Look auswählen. Probier’s doch mal aus!",
+    "note" : "Description message in the theme variant popover."
   },
   "updateNotification_updated_version" : {
     "title" : "Browser auf Version {version} aktualisiert.",
@@ -59,10 +71,6 @@
   "protections_noRecent" : {
     "title" : "Keine aktuellen Tracking-Aktivitäten",
     "note" : "Placeholder text shown in the Details view when no tracking activity was blocked in the last 7 days. Keep concise if possible."
-  },
-  "newBadge" : {
-    "title" : "Neu",
-    "note" : "Badge text indicating a new feature."
   },
   "stats_menuTitle" : {
     "title" : "Blockierte Tracking-Versuche",
