--- a/special-pages/pages/new-tab/public/locales/es/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/es/new-tab.json
@@ -8,6 +8,10 @@
       "instruction" : "*/note"
     }]
   },
+  "newBadge" : {
+    "title" : "Nuevo",
+    "note" : "Badge text indicating a new feature."
+  },
   "ntp_show_less" : {
     "title" : "Mostrar menos",
     "note" : "Button that reduces the number of items or content displayed."
@@ -31,6 +35,14 @@
   "ntp_popover_close_button" : {
     "title" : "Cerrar",
     "note" : "Button that closes the current popover."
+  },
+  "customizer_themeVariantPopoverTitle" : {
+    "title" : "Elige un tema de color que vaya contigo",
+    "note" : "Title for the popover that introduces the theme variant customization feature."
+  },
+  "customizer_themeVariantPopoverDescription" : {
+    "title" : "Ahora puedes elegir un color para el aspecto que quieras. ¡Pruébalo!",
+    "note" : "Description message in the theme variant popover."
   },
   "updateNotification_updated_version" : {
     "title" : "Navegador actualizado a la versión {version}.",
@@ -59,10 +71,6 @@
   "protections_noRecent" : {
     "title" : "No hay actividad de rastreo reciente",
     "note" : "Placeholder text shown in the Details view when no tracking activity was blocked in the last 7 days. Keep concise if possible."
-  },
-  "newBadge" : {
-    "title" : "Nuevo",
-    "note" : "Badge text indicating a new feature."
   },
   "stats_menuTitle" : {
     "title" : "Intentos de rastreo bloqueados",
