--- a/special-pages/pages/new-tab/public/locales/nl/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/nl/new-tab.json
@@ -8,6 +8,10 @@
       "instruction" : "*/note"
     }]
   },
+  "newBadge" : {
+    "title" : "Nieuw",
+    "note" : "Badge text indicating a new feature."
+  },
   "ntp_show_less" : {
     "title" : "Minder weergeven",
     "note" : "Button that reduces the number of items or content displayed."
@@ -31,6 +35,14 @@
   "ntp_popover_close_button" : {
     "title" : "Sluiten",
     "note" : "Button that closes the current popover."
+  },
+  "customizer_themeVariantPopoverTitle" : {
+    "title" : "Kies een kleurenthema dat bij je past",
+    "note" : "Title for the popover that introduces the theme variant customization feature."
+  },
+  "customizer_themeVariantPopoverDescription" : {
+    "title" : "Je kunt nu een kleur kiezen die jij wil. Probeer het maar eens!",
+    "note" : "Description message in the theme variant popover."
   },
   "updateNotification_updated_version" : {
     "title" : "Browser bijgewerkt naar versie {version}.",
@@ -59,10 +71,6 @@
   "protections_noRecent" : {
     "title" : "Geen recente trackingactiviteit",
     "note" : "Placeholder text shown in the Details view when no tracking activity was blocked in the last 7 days. Keep concise if possible."
-  },
-  "newBadge" : {
-    "title" : "Nieuw",
-    "note" : "Badge text indicating a new feature."
   },
   "stats_menuTitle" : {
     "title" : "Geblokkeerde trackingpogingen",
